# EctoLedger

./: .env.example  .gitignore  COMMERCIAL.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SANDBOX_CROSS_PLATFORM.md  docker-compose.build.yml  docker-compose.demo.yml  docker-compose.test.yml  ectoledger-linux  ectoledger-mac  ectoledger-win.ps1
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-site.yml  docker-publish.yml  enclave-tests.yml  release.yml
contracts/: EctoLedgerAnchor.sol
crates/compliance/: Cargo.toml
crates/compliance/src/: evm_anchor.rs  lib.rs  ots.rs  verifiable_credential.rs
crates/core/: Cargo.toml
crates/core/src/: attestation.rs  hash.rs  intent.rs  lib.rs  merkle.rs  policy.rs
crates/guard_unikernel/: Cargo.toml  link.ld
crates/guard_unikernel/.cargo/: config.toml
crates/guard_unikernel/src/: main.rs
crates/guest/: Cargo.toml
crates/guest/src/: main.rs
crates/host/: Cargo.toml  build.rs
crates/host/migrations/: 20260221000008_add_session_did.sql  20260222000009_add_rbac_tokens.sql  20260222000010_add_webhook_config.sql  20260222000011_add_compensating_actions.sql  20260223000012_add_enclave_attestation.sql  20260224000013_add_pending_approvals.sql
crates/host/migrations/sqlite/: 001_create_agent_events.sql  002_create_agent_snapshots.sql  003_create_agent_action_log.sql  004_create_agent_sessions.sql  005_add_enclave_attestation.sql  006_add_rbac_tokens.sql  007_add_webhook_config.sql  008_add_compensating_actions.sql  009_add_pending_approvals.sql  010_add_immutability_triggers.sql
crates/host/policies/: README.md  iso42001.toml
crates/host/src/: agent.rs  approvals.rs  blocking.rs  certificate.rs  cloud_creds.rs  compensation.rs  config.rs  db_setup.rs  error.rs  executor.rs  guard.rs  guard_process.rs  index.html  keychain.rs  ledger.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  output_scanner.rs  pg_notify.rs  policy.rs  pool.rs  red_team.rs  report.rs  schema.rs  secrets.rs  server.rs  signing.rs  snapshot.rs  sqlcipher.rs  tripwire.rs  wakeup.rs  webhook.rs
crates/host/src/commands/: anchor.rs  audit.rs  mod.rs  orchestrate.rs  prove.rs  report.rs  serve.rs
crates/host/src/enclave/: apple_hv.rs  ipc.rs  mod.rs  remote.rs  router.rs  runtime.rs  software.rs
crates/host/src/ledger/: postgres.rs  sqlite.rs
crates/host/src/llm/: mod.rs
crates/host/tests/: adversarial_guards.rs  agent_loop.rs  cross_platform_cmd_guards.rs  enclave_apple_boot.rs  enclave_ipc.rs  integration_sqlite.rs  ledger_integrity.rs  new_route_tests.rs  snapshot_restore.rs  two_phase_commit.rs
crates/host/tests/common/: mod.rs
crates/ledger-api/: Cargo.toml
crates/ledger-api/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  lib.rs  ollama_backend.rs  ollama_setup.rs  openai.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  output.rs  sandbox.rs
docs/: SCALING.md  demo-README.md  iso42001.md  quickstart.md  sandbox-parity.md  sandbox-verification-report.md  schema.md
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/scripts/: generate-icons.mjs
gui/src/: App.svelte  app.css  main.ts
gui/src-tauri/: Cargo.toml  create_icons.py  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  embedded.rs  main.rs  setup.rs
gui/src/lib/: Dashboard.svelte  DevHub.svelte  LiveDashboard.svelte  MetricsView.svelte  ObserverPanel.svelte  PolicyEditor.svelte  Sessions.svelte  Settings.svelte  SetupWizard.svelte  Sidebar.svelte  TestingView.svelte  TokensView.svelte  TripwireView.svelte  WebhooksView.svelte  adversarial-tests.json  happy-path-tests.json  utils.ts
gui/src/lib/stores/: observer.ts
gui/src/lib/ui/: Badge.svelte  Button.svelte  Card.svelte  CodeBlock.svelte  CopyButton.svelte  Input.svelte  Select.svelte  StatusDot.svelte  Toast.svelte  index.ts
scripts/: provision-firecracker.sh  setup-firecracker.sh  test-integration.sh
sdk/python/: README.md  pyproject.toml
sdk/python/ectoledger_sdk/: __init__.py  client.py  models.py
sdk/python/ectoledger_sdk/autogen/: __init__.py  hook.py
sdk/python/ectoledger_sdk/langchain/: __init__.py  tool.py
sdk/python/tests/: __init__.py  conftest.py  conftest_adversarial.py  test_adversarial.py  test_api___init__.py  test_api_auth.py  test_api_boundary.py  test_api_concurrency.py  test_api_config_metrics.py  test_api_events.py  test_api_policies.py  test_api_sessions.py  test_api_sse.py  test_api_tokens_webhooks.py  test_autogen_hook.py  test_client.py  test_langchain_tool.py  test_models.py
sdk/typescript/: .npmignore  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.build.json
sdk/typescript/src/: client.test.ts  client.ts  index.ts  models.ts
site/: changelog.html  demo.html  features.html  index.html  robots.txt  script.js  sitemap.xml  styles.css
