[package]
name        = "ectoledger-compliance"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
description = "Compliance artefact modules for EctoLedger: OpenTimestamps, EVM anchoring, Verifiable Credentials"
license.workspace     = true

[dependencies]
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }
reqwest         = { version = "0.13", features = ["json"] }
base64          = "0.22"
bs58            = "0.5"
chrono          = { workspace = true }
ed25519-dalek   = { workspace = true }
uuid            = { workspace = true }

# Optional EVM anchoring dependencies (feature-gated)
k256  = { version = "0.13", optional = true, features = ["ecdsa"] }
sha3  = { version = "0.10", optional = true }

# Optional ECDSA P-256 VC signing
p256  = { version = "0.13", optional = true, features = ["ecdsa"] }

[features]
default    = ["evm"]
evm        = ["dep:k256", "dep:sha3"]
vc-ecdsa   = ["dep:p256"]
