[package]
name = "ectoledger_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared pure logic for the EctoLedger: hashing, Merkle trees, schemas, and policy evaluation"
license.workspace = true

[dependencies]
sha2       = "0.10"
hex        = "0.4"
subtle     = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1"
regex-lite = "0.1"
tracing    = "0.1"
toml       = "0.8"
url        = "2"
ipnetwork  = "0.20"
thiserror  = "1"

# --- Optional BLAKE3 (TM-6b, feature-gated) ---
blake3     = { version = "1", optional = true }

[features]
default = []
# Use BLAKE3 instead of SHA-256 for content hashing (TM-6b).
hash-blake3 = ["dep:blake3"]