[package]
name          = "ledger-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description   = "Minimal async trait surface for the EctoLedger cryptographic ledger backend"
license.workspace = true

[dependencies]
async-trait = "0.1"
uuid        = { version = "1", features = ["v4", "serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
