[package]
name        = "ectoledger-llm"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
description = "LLM backend abstraction and provider implementations for EctoLedger"
license.workspace     = true

[dependencies]
ectoledger_core = { path = "../core" }
async-trait     = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
reqwest         = { version = "0.13", features = ["json"] }
regex-lite      = { workspace = true }
tokio           = { version = "1", features = ["process"] }
tracing         = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
