[package]
name        = "ectoledger-sandbox"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
description = "OS-level sandboxing and output formatting for EctoLedger"
license.workspace     = true

[dependencies]
thiserror     = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { version = "1", features = ["process", "time", "fs"] }
tempfile      = "3"

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { version = "0.4", optional = true }
seccompiler = { version = "0.4", optional = true }
libc        = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[features]
default             = ["sandbox"]
sandbox             = ["dep:landlock", "dep:seccompiler"]
sandbox-firecracker = []
