[package]
name    = "ectoledger-gui"
version = "0.6.2"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "ectoledger-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.13", features = ["json"] }
url            = "2"
urlencoding    = "2"
tokio          = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Embedded server dependencies
ectoledger = { path = "../../crates/host", default-features = false }
axum           = "0.8"
sha2           = "0.10"
hex            = "0.4"
rand           = "0.9"
dirs           = "6"
chrono         = { version = "0.4", features = ["serde"] }
tokio-util     = { version = "0.7", features = ["rt"] }

